--- a/miportafolio/style.css
+++ b/miportafolio/style.css
@@ -165,6 +165,11 @@ p.lead{
   display:grid;
   grid-template-columns:1fr 1fr;
   gap:12px;
+  .contact-title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 input,textarea{
